--- a/style.css
+++ b/style.css
@@ -1,96 +1,28 @@
-@font-face {
-    font-family: 'greatthings';
-    src: url('font/greatthings/goingtodogreatthings-webfont.woff2') format('woff2'),
-         url('font/greatthings/goingtodogreatthings-webfont.woff') format('woff'),
-         url('font/greatthings/goingtodogreatthings-webfont.ttf') format('truetype'),
-         url('font/greatthings/goingtodogreatthings-webfont.svg#goingtodogreatthingsmedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'miracle_dayregular';
-    src: url('font/md/miracle_day-webfont.eot');
-    src: url('font/md/miracle_day-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/md/miracle_day-webfont.woff2') format('woff2'),
-         url('font/md/miracle_day-webfont.woff') format('woff'),
-         url('font/md/miracle_day-webfont.ttf') format('truetype'),
-         url('font/md/miracle_day-webfont.svg#miracle_dayregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'penchill';
-    font-weight: 200;
-    src: url('font/penchill_gage/penchill_gage-webfont.woff2') format('woff2'),
-         url('font/penchill_gage/penchill_gage-webfont.woff') format('woff'),
-         url('HG-website/font/penchill_gage/penchill_gage-webfont.ttf') format('truetype'),
-         url('HG-website/font/penchill_gage/penchill_gage-webfont.svg#penchill_gageregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 * {
     margin: 0;
-    scroll-snap-type: y mandatory;
+    padding: 0;
     /*box-sizing: border-box;*/
     /*font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;*/
 }
-body {
 
-    font-family: "greatthings";
-    color: #330a39ff;
-    /*font-family: 'Courier New', Courier, monospace;*/
-  }
-
+@font-face {
+    font-family: goingtodogreatthings;
+    src: url(font/goingtodogreatthings.ttf);
+}
 .snap {
-    height: 100vh;
-    width: 100vw;
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
+    height: 100vh;
 }
 
 section {
-    /*display: flex;*/
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
-    margin-top: 90px;
-    scroll-snap-align: start;
-    text-align: center;    
-    display: inline-block;
-    /*background-color: rgb(233,214,251);*/
-}
-
-section svg {
-    height: 70%; /* window height */
-    width: 50%;
-}
-image {
-    height: 130%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    
-    border-style: solid;
-}
-.intro1 {
-    font-size: 5em;
-    padding-top: 2%;
-}
-.intro2 {
-    font-size: 5em;
-}
-.explain_txt {
-    margin: 10%;
-    margin-left: 30%;
-    font-family: goingtodogreatthings, 'Segoe UI';
-    color: rgb(77, 77, 77);
+    scroll-snap-align: start; 
+    background-color: rgb(233,214,251);
 }
 .acktxt {
     width: 100vw;
@@ -101,22 +33,21 @@ image {
     align-items: center;
     text-align: center;
 
-    font-size: 2.5em;
-    
+    font-size: 5em;
+    scroll-snap-align: start; 
     background-color: rgb(233,214,251);
-    font-family: 'Segoe UI'; 
-    font-style: light;
-
-    background-image: linear-gradient(180deg, #ffebff, #efc6f5);
+    font-family: goingtodogreatthings, 'Segoe UI';
+    color: rgb(66,33,11);
+    /*border-style: dotted;*/
 }
 .acktxt1 {
-    /*padding-top: 90%;*/
+    padding-top: 90%;
     padding-left: 10%;
     padding-right: 10%; 
     font-size: 0.8em;
 }
 .acktxt2 {
-    /*padding-bottom: 90%;*/
+    padding-bottom: 90%;
     font-size: 0.9em; 
 }
 .link {
@@ -180,9 +111,7 @@ image {
     display: inline-block;
     top: -550%; left: -25%;
   }
-  .headache {
-    color: black;
-  }
+  
  
 #face-sleep .tooltipbox {
     visibility: hidden;
